--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "clean": "rimraf dist .cache .cache-loader",
     "check": "npx stylelint \"src/assets/styles/**/*.scss\"",
     "dev": "npm-run-all clean parcel:dev",
-    "build": "npm-run-all clean check parcel:build",
+    "build": "npm-run-all clean prettier:fix check parcel:build",
     "test": "echo 'Everything is working as expected ✅\nStart working on your project by running \\033[1mnpm run dev\\033[0m'",
-    "release": "git push --follow-tags origin master"
+    "release": "git push --follow-tags origin main"
   },
   "repository": {
     "type": "git",
@@ -47,6 +47,7 @@
     "@commitlint/config-conventional": "^11.0.0",
     "commitizen": "^4.2.2",
     "commitlint": "^11.0.0",
+    "fsevents": "^2.1.3",
     "husky": "^4.3.0",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.4",
@@ -56,7 +57,6 @@
     "prettier": "^2.1.2",
     "rimraf": "^2.7.1",
     "sass": "^1.27.0",
-    "stylelint": "^13.7.2",
     "stylelint-config-sass-guidelines": "^7.1.0",
     "stylelint-config-standard": "^20.0.0"
   }
